<resources>
    <string name="app_name">Lei</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record_audio">Record</string>
    <string name="go_to_lei_s_recordings">Lei\'s Recordings</string>
    <string name="go_to_david_s_recordings">David\'s Recordings</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="playback_audio">Play</string>
    <string name="play_audio_recording">Play</string>
    <string name="media_is_playing">Media is playing</string>
    <string name="upload">Upload</string>
    <string name="add_name_for_recording">Add name for recording</string>
</resources>