<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RecordAudio">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_name_for_recording"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <ImageView
        android:id="@+id/record_audio_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/record_audio_image"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <ImageView
        android:id="@+id/playback_audio"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/playback_icon"

        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playback_audio_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/playback_audio"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/playback_audio"
        app:layout_constraintStart_toStartOf="@+id/playback_audio"
        app:layout_constraintTop_toBottomOf="@+id/playback_audio" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <Button
        android:id="@+id/upload_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/upload_audio"
        app:layout_constraintStart_toEndOf="@id/upload_audio"
        app:layout_constraintTop_toTopOf="@id/upload_audio" />

    <TextView
        android:id="@+id/record_audio_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/record_audio_image"
        app:layout_constraintStart_toStartOf="@+id/record_audio_image"
        app:layout_constraintTop_toBottomOf="@+id/record_audio_image" />

    <!--    android:text="@string/record_audio"-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <Button
        android:id="@+id/lei_records"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/go_to_lei_s_recordings"
        app:layout_constraintEnd_toEndOf="@+id/david_records"
        app:layout_constraintStart_toStartOf="@+id/david_records"
        app:layout_constraintTop_toBottomOf="@+id/david_records" />

    <Button
        android:id="@+id/david_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/go_to_david_s_recordings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_constraint" />

</androidx.constraintlayout.widget.ConstraintLayout>